--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,1 +1,17 @@
+body {
+  background-color: lightblue;
+}
 
+h1 {
+  color: white;
+  text-align: center;
+}
+
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+
+div {
+  box-shadow: 10px 10px lightblue;
+}
