--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,11 @@ p {
   font-family: bookman-old;
   font-size: 20px;
 }
+  ol{
+    color: black;
+    font-family: bookman-old;
+    font-size: 25px;
+  }
 
 div {
   box-shadow: 10px 10px lightblue;
