--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,8 +3,11 @@
 
 @import "{{ site.theme }}";
 
+.page-header {
+  
+    background-image: linear-gradient( to right, #FF0000,  #FFFF00);
 
-head{
+head
 h1 {
   color: white;
   text-align: center;
