--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 .page-header {
   
-    background-image: linear-gradient( to right, #FF0000,  #FFFF00);
+    background-image: linear-gradient( to right, #FF0000,  #FFFF00, #0000FF);
 
 head
 h1 {
