--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 
 .page-header {
   
-    background-image: linear-gradient( to right, #0000FF, #00FF00);
+    background-image: linear-gradient( to right, #A020F0, #0000FF, #00FF00);
 
 head
 h1 {
